--- a/src/style/components/_banner.scss
+++ b/src/style/components/_banner.scss
@@ -1,73 +1,69 @@
-.home-container{ 
-    padding-left: 100px;
-    padding-right: 100px;
-
+.home-container {
+  padding-left: 100px;
+  padding-right: 100px;
 }
-.banner{
-    height: 223px;
+.banner {
+  height: 223px;
+  width: 100%;
+  padding: 0px 100px 0px 100px;
+  box-sizing: border-box;
+  border-radius: 25px;
+  background-position: center;
+  background-size: 100% auto;
+  position: relative;
+  margin-top: 5vh;
+  margin-bottom: 3vh;
+
+  .title {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
     width: 100%;
-    padding: 0px 100px 0px 100px;
-    box-sizing: border-box;
-    border-radius:25px ;
-    background-position: center;
-    background-size: 100% auto;
-    position: relative;
-    margin-top: 5vh;
-    margin-bottom: 3vh;
-    &:before {
-        content: ""; 
-        position: absolute; 
-        top: 0; 
-        left: 0; 
-        width: 100%; 
-        height: 100%; 
-        background-color: rgba(0, 0, 0, 0.3); 
-        border-radius: 25px;
-        padding: 0px 100px 0px 100px;
-        box-sizing: border-box;
-      }
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+    margin: 0;
+    -webkit-backdrop-filter: brightness(0.8);
+    backdrop-filter: brightness(0.8);
+    border-radius: 25px;
+    h1 {
+      font-size: 48px;
+      font-weight: 500;
+      color: white;
     }
-
-
-    .banner h1 {
-        text-align: center;
-        width: 100%;
-        position: absolute;
-        top: 50%;
-        left: 50%; 
-        transform: translate(-50%, -50%); 
-        z-index: 2;
-        font-size: 48px;
-        font-weight: 500;
-        color: white;
-        margin: 0;
-    }
-    @media screen and (max-width: 765px) {
-        .home-container{
+  }
+}
+@media screen and (max-width: 765px) {
+     .home-container{
             padding: 0px 20px;
         }
-        .banner {
-            width: 100%;
-            height: 111px;
-            margin-bottom: 15px;
-            border-radius: 10px;
-            &:before{
-                border-radius: 10px 10px 10px 10px;
-            }
-             h1 {
-                text-align: left;
-                padding-left: 15px;
-                width: 50%;
-                position: absolute;
-                top: 50%; 
-                left: 25%;
-                transform: translate(-50%, -50%); 
-                z-index: 2;
-                font-size: 24px;
-                font-weight: 500;
-                color: white;
-                margin: 0;
-                
-            }
-          }
-        }
+  .banner {
+    width: 100%;
+    height: 111px;
+    margin-bottom: 15px;
+    border-radius: 10px;
+    .title {
+      text-align: left;
+      border-radius: 10px;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      margin: 0;
+      justify-content: flex-start;
+      h1 {
+        width:65%;
+        font-size: 24px;
+        font-weight: 500;
+        padding-left: 13px;
+      }
+    }
+  }
+}
