--- a/src/style/components/_gallery.scss
+++ b/src/style/components/_gallery.scss
@@ -23,22 +23,7 @@
       position: relative;
       padding: 10px;
       box-sizing: border-box;
-      overflow: hidden; /* Pour cacher le dépassement du pseudo-élément */
-  
-      &::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(
-          180deg,
-          rgba(255, 255, 255, 0) 0%,
-          rgba(0, 0, 0, 0.5) 100%
-        );
-      }
-  
+      overflow: hidden; 
       h3 {
         font-size: 18px;
         font-weight: 500;
@@ -47,10 +32,10 @@
         bottom: 5%;
       }
     }
-  }
+}
 
 
-  @media screen and (max-width: 765px) {
+@media screen and (max-width: 765px) {
   .gallery{
     background-color: white;
     margin-top: 0;
