--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,4 +3,6 @@
 @import "./layout/header";
 @import "./layout/footer";
 @import "./components/banner";
-@import "./components/gallery"
+@import "./components/gallery";
+@import "./components/collapse";
+@import "./pages/about"
