--- a/src/style/setting.scss
+++ b/src/style/setting.scss
@@ -11,3 +11,15 @@ body{
         text-decoration: none;
     }
 }
+
+.main-container{ 
+    padding-left: 100px;
+    padding-right: 100px;
+
+}
+
+@media screen and (max-width: 765px) {
+    .main-container{
+        padding: 0px 20px;
+    }
+}    
