--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,4 +5,7 @@
 @import "./components/banner";
 @import "./components/gallery";
 @import "./components/collapse";
-@import "./pages/about"
+@import "./pages/about";
+@import "./pages/error";
+@import "./pages/accomodation";
+@import "./components/slider";
